# racing-overlay

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  RELEASE.md  build_windows.py  overlay_config.json  requirements-build.txt  requirements-dev.txt  requirements.txt  run.py
docs/: map-wiki.md
installer/: gridglance.iss  racing_overlay.iss
overlay/: __init__.py  __main__.py  app.py  autostart.py  busy_dialog.py  common.py  config.py  config_editor.py  constants.py  demo_data.py  driver_groups.py  event_result_import.py  hybrid.py  ipc_client.py  iracing_results.py  irating_calc.py  lap_compare_store.py  layout_store.py  map_markers.py  panel.py  paths.py  pit_service.py  pit_strategy.py  pit_strategy_constants.py  rust_launcher.py  setting_help.py  single_instance.py  standings_rows.py  svgpath.py  sysstats.py  telemetry.py  track_authoring.py  track_store.py  traffic.py  updater.py  version.py
overlay-rs/: Cargo.toml  README.md
overlay-rs/crates/gridglance-overlay/: Cargo.toml
overlay-rs/crates/gridglance-overlay/src/: app_icon.rs  autostart.rs  chrome.rs  config.rs  driver_groups.rs  host.rs  icons.rs  iracing_results.rs  irating.rs  layered.rs  main.rs  map_markers.rs  paths.rs  state.rs  sysstats.rs  track_path.rs  win_click.rs
overlay-rs/crates/gridglance-overlay/src/cloud/: dotenv.rs  mod.rs
overlay-rs/crates/gridglance-overlay/src/ipc/: mod.rs
overlay-rs/crates/gridglance-overlay/src/settings/: mod.rs  scan.rs  schema.rs  theme.rs  widgets.rs
overlay-rs/crates/gridglance-overlay/src/shell/: mod.rs  tray.rs
overlay-rs/crates/gridglance-overlay/src/telemetry/: format.rs  fuel.rs  irsdk.rs  lap_compare.rs  lap_log.rs  mod.rs  pit_advice.rs  pit_track.rs  sector_timer.rs  tables.rs
overlay-rs/crates/gridglance-overlay/src/tracks/: html_import.rs  layers.rs  mod.rs
overlay-rs/crates/gridglance-overlay/src/widgets/: dash.rs  delta_bar.rs  ers_hybrid.rs  flags.rs  fuel_calc.rs  inputs.rs  lap_compare.rs  laptime_log.rs  leaderboard_strip.rs  map.rs  mod.rs  pit_advisor.rs  pit_board.rs  radar.rs  radio_tower.rs  relative.rs  scoreboard_digits.rs  sector_timing.rs  standings.rs  system_panel.rs  table.rs  tire_panel.rs  weather_panel.rs
tests/: test_app_settings.py  test_autostart.py  test_car_on_route.py  test_chrome_helpers.py  test_config_editor_nav.py  test_dash_metrics.py  test_delta_inputs_flags.py  test_demo_paint_regression.py  test_demo_track.py  test_driver_groups.py  test_dual_layout.py  test_dual_pit_lane.py  test_ers_hybrid.py  test_event_result_import.py  test_fuel_calc_units.py  test_ipc_client.py  test_irating_calc.py  test_lap_compare_ref.py  test_laptime_fuel_demo.py  test_laptime_log_paint.py  test_layout_geometry.py  test_leaderboard_strip.py  test_map_authoring_interactive.py  test_map_car_color.py  test_map_markers.py  test_map_player_pit.py  test_map_speaking_zorder.py  test_map_zones.py  test_midrace_bootstrap.py  test_oval_corner_labels.py  test_overlay_start.py  test_pit_advisor_layout.py  test_pit_advisor_telemetry.py  test_pit_advisor_visibility.py  (+42 more)
(+95 files in other folders)
