[workspace]
resolver = "2"
members = [
    "crates/gridglance-ipc",
    "crates/gridglance-overlay",
]
default-members = ["crates/gridglance-overlay"]

[workspace.package]
version = "1.69.5"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
